Source/WebCore/page/EventHandler.h
@@ -461,6 +461,7 @@ private:
     void autoHideCursorTimerFired();
 #endif
 
+    void clearOrScheduleClearingLatchedStateIfNeeded(const PlatformWheelEvent&);
     void clearLatchedState();
 
     Frame& m_frame;
@@ -489,6 +490,9 @@ private:
     Timer m_cursorUpdateTimer;
 #endif
 
+#if PLATFORM(MAC)
+    Timer m_pendingMomentumWheelEventsTimer;
+#endif
     std::unique_ptr<AutoscrollController> m_autoscrollController;
     bool m_mouseDownMayStartAutoscroll { false };
     bool m_mouseDownWasInSubframe { false };
