Source/WebCore/platform/PlatformWheelEvent.h
@@ -160,6 +160,8 @@ namespace WebCore {
         bool shouldConsiderLatching() const;
         bool shouldResetLatching() const;
         bool isEndOfMomentumScroll() const;
+        bool isEndOfNonMomentumScroll() const;
+        bool isTransitioningToMomentumScroll() const;
 #else
         bool useLatchedEventElement() const { return false; }
 #endif
@@ -211,6 +213,15 @@ namespace WebCore {
         return m_phase == PlatformWheelEventPhaseNone && m_momentumPhase == PlatformWheelEventPhaseEnded;
     }
 
+    inline bool PlatformWheelEvent::isEndOfNonMomentumScroll() const
+    {
+        return m_phase == PlatformWheelEventPhaseEnded && m_momentumPhase == PlatformWheelEventPhaseNone;
+    }
+
+    inline bool PlatformWheelEvent::isTransitioningToMomentumScroll() const
+    {
+        return m_phase == PlatformWheelEventPhaseNone && m_momentumPhase == PlatformWheelEventPhaseBegan;
+    }
 #endif
 
 } // namespace WebCore
